Fix api bugs
